Fix center slot for TrangaPage Make it easier to flash chapter or download on MangaDetailPage Add "No timelimit" button to actions page Actionspage fix Chapter link

--- a/website/app/assets/css/main.css
+++ b/website/app/assets/css/main.css
@@ -48,3 +48,13 @@
         transform: translate(1px, -2px) rotate(-1deg);
     }
 }
+
+@keyframes flash {
+    0%,
+    100% {
+        background-color: initial;
+    }
+    50% {
+        background-color: var(--color-secondary);
+    }
+}
